fix display not fit in window and now can mark the emotion chosed

--- a/app/forum/[pid]/unitforum.css
+++ b/app/forum/[pid]/unitforum.css
@@ -4,14 +4,14 @@
 
 @layer components {
     .unit-emotion {
-        @apply flex flex-auto items-center justify-center duration-300 bg-white rounded-xl mx-4 h-12 w-20 hover:bg-[#bfbfbf];
+        @apply flex flex-auto items-center justify-center duration-300 rounded-xl mx-4 h-12 w-20 ;
     }
 }
 
 .title{
     position: relative;
     left: 5rem;
-    width: 80vw;
+    width: calc(90vw - 5rem);
     font-size: 2.5rem;
 }
 
@@ -21,7 +21,6 @@
     width: calc(90vw - 5rem);
     display: flex;
     flex-direction: column;
-    gap: 1rem;
 }
 .unit {    
     width: calc(90vw - 5rem);
@@ -57,7 +56,7 @@
     display: flex;
     flex-direction: column;
     align-self: center;
-    width: 90vw;
+    width: 80vw;
 }
 
 .post-pannel button{
