--- a/app/navbar.css
+++ b/app/navbar.css
@@ -2,7 +2,7 @@
     display: flex;
     align-items: center;
     height: 4rem;
-    width: 100vw;
+    width: 100%;
 }
 .navbar-ico{
     justify-self: flex-start;
